samples/_failures_safe/1761447189_6a6306_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a095a659.c: In function ‘main’:
./samples/SAFE/__tmp_a095a659.c:154:9: error: expected declaration or statement at end of input
  154 |         printf("1. Matrix Addition\n");
      |         ^~~~~~
./samples/SAFE/__tmp_a095a659.c:154:9: error: expected declaration or statement at end of input
